--- a/AlgorithmsNutshellTests/AlgorithmsNutshellTests.csproj
+++ b/AlgorithmsNutshellTests/AlgorithmsNutshellTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search\SimpleSearchTests.cs" />
     <Compile Include="Sort\SimpleSorterTests.cs" />
   </ItemGroup>
   <ItemGroup>
