--- a/AlgorithmsNutshell/AlgorithmsNutshell.csproj
+++ b/AlgorithmsNutshell/AlgorithmsNutshell.csproj
@@ -40,10 +40,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Search\SimpleSearch.cs" />
     <Compile Include="Sort\SimpleSorter.cs" />
+    <Compile Include="Tree\RedBlackEventArgs.cs" />
+    <Compile Include="Tree\RedBlackException.cs" />
+    <Compile Include="Tree\RedBlackNode.cs" />
+    <Compile Include="Tree\RedBlackTree.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
