--- a/AlgorithmsNutshellTests/AlgorithmsNutshellTests.csproj
+++ b/AlgorithmsNutshellTests/AlgorithmsNutshellTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\SimpleSearchTests.cs" />
     <Compile Include="Sort\SimpleSorterTests.cs" />
+    <Compile Include="Tree\RedBlackTreeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AlgorithmsNutshell\AlgorithmsNutshell.csproj">
